--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
         #poro2{
             height:70px;
             width:100px;
-            margin-left:500px
+            margin-left:500px;
         }
         #poro3{height:70px;
             width:100px;
-            margin}
+        }
         #poro4 {height: 70px;
             width: 100px;
-            margin-left:90px; }
+            margin-left:90px;
+        }
          #b{
             Height:450px
             }
